
Thanks!

2.0.0.2009
----------
- Small collection of UI cleanup:
  - Cmd+W closes Preferences window if it is open, rather than the main window.
  - The "About Vienna" window can now be closed with Esc or Cmd+W.
  - Reduced height of tabs slightly.
  - Holding down Cmd+Alt keys while clicking tab close button closes all tabs.
  - Fixed close tab behaviour properly this time.

2.0.0.2008 (BETA 2)
-------------------
- Added final Swedish localisation changes for beta 2.
- Fixed French localisation import error.
- Fix bug with importing OPML files.
- Added 'group folder', 'smart folder' and 'rss folder' attributes to folder class in scripting.
- Added Restore command to restore an article in the Trash Folder back to where it came from.
- Fixed UI update bug when a folder is deleted during a refresh.
- Exported files now have ".opml" extension added to them.
- Smart search folder operators are now limited to "is" and "is not" as "under" is now implied.
- Encode extended characters in HTML article text dragged from the article list view.

2.0.0.2007
----------
- You can now undo/redo Mark All Read, even across multiple folders.
- Article view split bar position is now properly persisted across sessions.
- Disabled proportional folder and article list split bar resizing when the main window is resized.
- Selecting multiple articles now shows multiple articles in the article pane.
- Fixed problem when parsing feeds from http://macintouch.com/rss.xml. Some servers report an
  error unless the User-agent field is specified in the HTTP header.
- Added built-in browser support. Web pages can now be opened in Vienna in separate tabs as an
  option. Next and Previous Tab commands added to the Window menu. Close Tab added to the File
  menu. Right-click popup menu allows links or pages to be opened externally.
- Added option in Preferences to open web pages in Vienna.
- Close Window command changed to Shift+Command+W when tabs are open for consistency with
  Camino and Safari.